# beanquery-interactive-manual

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  beanquery_interactive_manual.py  custom.css  manual.py  pyproject.toml
docs/: index.html
