[project]
name = "beanquery-interactive-manual"
description = "An interactive manual and tutorial for beanquery — a customizable, extensible, lightweight SQL-like query tool for Beancount ledger data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beancount",
    "beanquery>=0.2.0",
    "marimo>=0.23.3",
    "pyzmq>=27.1.0",
]
